--- a/home_page/home.html
+++ b/home_page/home.html
@@ -6,7 +6,7 @@
     <title>WebCamp</title>
     <link rel="stylesheet" href="/home_page/home.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="/assets/logo_png.png" type="image">
+    <link rel="icon" href="/assets/logo_png.png" type="image" id="logo">
     <script src="https://kit.fontawesome.com/dada07158c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWj44oi9sI5ALpBi4Su/0mpzn0w0r7rc7Ftw3Q" crossorigin="anonymous">
 
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar_container">
-            <h1><img src="/assets/logo_png.png" id="navbar_logo"></h1>
+            <h1><img src="/assets/logo_png2.png" id="navbar_logo"></h1>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -89,8 +89,9 @@
         <div class="footerlinks">
             <div class="social_media">
                 <div class="social_media-wrap">
-                    <div class="footer_logo"></div>
-                        <a src="/assets/logo_png.png" id="footer_logo"><i class="fas faa-gem"></i>WEBCAMP</a>
+                    <div class="footer_logo">
+                        <a id="footer_logo"><i class="fas faa-gem"></i>WEBCAMP</a>
+                    </div>
                 </div>
                 <p class="website_rights">© WEBCAMP 2024. All rights reserved</p>
                 <div class="social_icons">
