--- a/home_page/home.html
+++ b/home_page/home.html
@@ -49,7 +49,7 @@
             <div class="main_content">
                 <h1 class="anm">TSIW</h1><br>
                 <h2 class="anm">See what makes this course different</h2>
-                <button class="main_btn"><a href="/">Get Started</a></button>
+                <button class="main_btn"><a href="/tsiw_page/tsiw_page.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
                 <img src="/assets/Logotipo-ESMAD-Branco.png" alt="esmad" id="main_img">
@@ -62,7 +62,7 @@
         <div class="learn_container">
             <div class="learn_card">
                 <h2>HTML, CSS, JAVASCRIPT AND MORE... </h2>
-                <button>Learn</button>
+                <button><a href="/learn_page/learn_page.html">Learn</a></button>
             </div>
             <div class="learn_container">
                 <div class="learn_card2">
