--- a/login_page/login_page.html
+++ b/login_page/login_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebCamp</title>
-    <link rel="stylesheet" href="/learn_page/learn_page.css">
+    <link rel="stylesheet" href="/login_page/login_page.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="icon" href="/assets/logo_png.png" type="image" id="logo">
     <script src="https://kit.fontawesome.com/dada07158c.js" crossorigin="anonymous"></script>
@@ -26,10 +26,10 @@
                     <a href="/home_page/home.html" class="navbar_links"> Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/tsiw_page/tsiw_page.html" class="navbar_links"> TSIW </a>
+                    <a src="/tsiw_page/tsiw_page.html" class="navbar_links"> TSIW </a>
                 </li>
                 <li class="navbar_item">
-                    <a src="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
+                    <a href="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
                 </li>
                 <li class="navbar_item">
                     <a href="/games_page/games_page.html" class="navbar_links"> Games </a>
@@ -38,13 +38,40 @@
                     <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
                 </li>
                 <li class="navbar_btn">
-                    <a href="/login_page/login_page.html" class="button"> Sign Up  </a>
+                    <a href="/login_page/" class="button"> Sign Up  </a>
                 </li>
             </ul>
         </div>
     </nav>
 
-<
+    <div class="wrapper">
+        <div class="login-box">
+            <div class="form-box login">
+            <h2>Login</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+                    <input type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><i class="fa-solid fa-lock"></i></span>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="remember-forget">
+                    <label><input type="checkbox">Remember me</label>  
+                    <a href="#">Forgot Password?</a>
+                </div>
+                <button type="submit" class="btn-sub">Login</button>
+                <div class="login-register">
+                    <p>Don't have an account?<a href="#" class="register-link">Register</a></p>
+                </div>
+            </form>
+        </div>
+        </div>
+        
+    </div>
 
 
 
@@ -96,6 +123,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
-    <script src="/learn_page/learn_page.js"></script>
+    <script src="/login_page/login_page.js"></script>
 </body>
 </html>
