--- a/tsiw_page/tsiw_page.html
+++ b/tsiw_page/tsiw_page.html
@@ -32,7 +32,7 @@
                     <a href="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/games_page/games_page.html" class="navbar_links"> Games </a>
+                    <a href="/games_page/games_page.html" class="navbar_links"> Escape Room </a>
                 </li>
                 <li class="navbar_item">
                     <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
