--- a/home_page/home.html
+++ b/home_page/home.html
@@ -32,7 +32,7 @@
                     <a href="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/games_page/games_page.html" class="navbar_links"> Games </a>
+                    <a href="/games_page/games_page.html" class="navbar_links"> Escape Room </a>
                 </li>
                 <li class="navbar_item">
                     <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
@@ -62,7 +62,7 @@
         <div class="learn_container">
             <div class="learn_card">
                 <h2>HTML, CSS, JAVASCRIPT AND MORE... </h2>
-                <button><a href="/learn_page/learn_page.html">Learn</a></button>
+                <button><a href="/learn_page/learn_page.html" class="navbar_links">Learn</a></button>
             </div>
             <div class="learn_container">
                 <div class="learn_card2">
@@ -73,13 +73,13 @@
             <div class="learn_container">
                 <div class="learn_card3">
                     <h2>LEARN MORE ABOUT US</h2>
-                    <button>See More</button>
+                    <button><a href="/aboutUs_page/aboutUs_page.html" class="navbar_links">See More</a></button>
                 </div>
             </div>
             <div class="learn_container">
                 <div class="learn_card4">
                     <h2>CUSTOMIZE YOUR PROFILE</h2>
-                    <button>Account</button>
+                    <button><a href="/login_page/login_page.html" class="navbar_links">Account</a></button>
                 </div>
             </div>
         </div>
