--- a/login_page/login_page.html
+++ b/login_page/login_page.html
@@ -32,13 +32,13 @@
                     <a href="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/games_page/games_page.html" class="navbar_links"> Games </a>
+                    <a href="/games_page/games_page.html" class="navbar_links"> Escape Room </a>
                 </li>
                 <li class="navbar_item">
                     <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
                 </li>
                 <li class="navbar_btn">
-                    <a href="/login_page/" class="button"> Sign Up  </a>
+                    <a  class="btnLogin-popup"> Sign Up  </a>
                 </li>
             </ul>
         </div>
@@ -46,6 +46,9 @@
 
     <div class="wrapper">
         <div class="login-box">
+            <span class="icon-close">
+                <i id="iconClose" class="fa-solid fa-x"></i>
+            </span>
             <div class="form-box login">
             <h2>Login</h2>
             <form action="#">
@@ -59,16 +62,45 @@
                     <input type="password" required>
                     <label>Password</label>
                 </div>
-                <div class="remember-forget">
+                <div class="remember-forgot">
                     <label><input type="checkbox">Remember me</label>  
                     <a href="#">Forgot Password?</a>
                 </div>
-                <button type="submit" class="btn-sub">Login</button>
+                    <a href="/account_page/account_page.html" class="navbar_links"><button  type="submit" class="btn-sub">Login</button></a>
                 <div class="login-register">
                     <p>Don't have an account?<a href="#" class="register-link">Register</a></p>
                 </div>
             </form>
-        </div>
+            </div>
+
+            <div class="form-box register">
+            <h2>Registration</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"><i class="fa-solid fa-user"></i></span>
+                    <input type="text" required>
+                    <label>Username</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+                    <input type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><i class="fa-solid fa-lock"></i></span>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox" required>I agree to the terms & conditions</label>  
+                </div>
+                <button type="submit" class="btn-sub">Register</button>
+                <div class="login-register">
+                    <p>Already have an account?<a href="#" class="login-link">Login</a></p>
+                </div>
+            </form>
+            </div>
+        
         </div>
         
     </div>
