--- a/aboutUs_page/aboutUs_page.html
+++ b/aboutUs_page/aboutUs_page.html
@@ -26,7 +26,7 @@
                     <a href="/home_page/home.html" class="navbar_links"> Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a src="/tsiw_page/tsiw_page.html" class="navbar_links"> TSIW </a>
+                    <a href="/tsiw_page/tsiw_page.html" class="navbar_links"> TSIW </a>
                 </li>
                 <li class="navbar_item">
                     <a href="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
@@ -35,7 +35,7 @@
                     <a href="/games_page/games_page.html" class="navbar_links"> Escape Room </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
+                    <a src="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
                 </li>
                 <li class="navbar_btn">
                     <a href="/login_page/login_page.html" class="button"> Sign Up  </a>
@@ -102,21 +102,6 @@
             </section>
         </div>
     </div>
-       
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <div class="footer_container">
         <div class="footerlinks">
