--- a/account_page/account_page.html
+++ b/account_page/account_page.html
@@ -38,7 +38,7 @@
                     <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
                 </li>
                 <li class="navbar_btn">
-                    <a src="/login_page/login_page.html" class="button"> Sign Up  </a>
+                    <a href="/login_page/login_page.html" class="button"> Sign Up  </a>
                 </li>
             </ul>
         </div>
