--- a/aboutUs_page/aboutUs_page.html
+++ b/aboutUs_page/aboutUs_page.html
@@ -73,8 +73,8 @@
                     <img src="/assets/pngwing.com (9).png" alt="miguel">
                 </div>
                 <div class="about-content">
-                    <h2>Our Mission</h2>
-                    <p>A nossa missão é, com o conhecimento que adquirimos, incentivar e atrair novos estudantes a embarcar no que o Design na Web, oferecendo diversas formas de intereção sobre o que se faz atras das cortinas.</p>
+                    <h2>A nossa missão</h2>
+                    <p>A nossa missão é, com o conhecimento que adquirimos, incentivar e atrair novos estudantes a embarcar no que é o Design na Web, oferecendo diversas formas de intereção sobre o que se faz atras das cortinas.</p>
                 </div>
             </section>
         </div>
@@ -91,7 +91,7 @@
                     <img src="/assets/pngegg (29).png" alt="miguel">
                 </div>
                 <div class="about-content">
-                    <h2>Our Values</h2>
+                    <h2>Valores</h2>
                     <ul>
                         <li class="open">Excelência Académica</li><br>
                         <li class="closed">Colaboração em Grupo</li><br>
