--- a/login_page/login_page.html
+++ b/login_page/login_page.html
@@ -26,7 +26,7 @@
                     <a href="/home_page/home.html" class="navbar_links"> Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a src="/tsiw_page/tsiw_page.html" class="navbar_links"> TSIW </a>
+                    <a href="/tsiw_page/tsiw_page.html" class="navbar_links"> TSIW </a>
                 </li>
                 <li class="navbar_item">
                     <a href="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
