--- a/aboutUs_page/aboutUs_page.html
+++ b/aboutUs_page/aboutUs_page.html
@@ -70,7 +70,7 @@
         <div class="us-container2">
             <section class="about2">
                 <div class="about-image3">
-                    <img src="/assets/pngwing.com (9).png" alt="miguel">
+                    <img src="/assets/pngwing.com (9).png" alt="mission">
                 </div>
                 <div class="about-content">
                     <h2>A nossa missão</h2>
@@ -88,9 +88,9 @@
         <div class="us-container">
             <section class="about">
                 <div class="about-image3">
-                    <img src="/assets/pngegg (29).png" alt="miguel">
+                    <img src="/assets/pngegg (29).png" alt="values">
                 </div>
-                <div class="about-content">
+                <div class="about-content2">
                     <h2>Valores</h2>
                     <ul>
                         <li class="open">Excelência Académica</li><br>
