--- a/home_page/home.html
+++ b/home_page/home.html
@@ -61,13 +61,13 @@
         <h1 class="anm2">See what this course is all about</h1>
         <div class="learn_container">
             <div class="learn_card">
-                <h2>HTML, CSS, JAVASCRIPT AND MORE... </h2>
+                <h2>HTML, CSS AND JAVASCRIPT</h2>
                 <button><a href="/learn_page/learn_page.html" class="navbar_links">Learn</a></button>
             </div>
             <div class="learn_container">
                 <div class="learn_card2">
                     <h2>AMUSING ESCAPE ROOM</h2>
-                    <button>Play</button>
+                    <button><a href="/games_page/games_page.html" class="navbar_links">Play</a></button>
                 </div>
             </div>
             <div class="learn_container">
