--- a/learn_page/learn_page.html
+++ b/learn_page/learn_page.html
@@ -44,8 +44,60 @@
         </div>
     </nav>
 
-<
-
+    <div class="learn-container">
+        <h1>Do You Want To Learn More About Coding?</h1>
+        <a href="#html"><button class="learn-btn">Learn</button></a>
+    </div>
+    <div class="html-container" id="html">
+        <section class="html">
+            <div class="html-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/salY_Sm6mv4?si=bxUCsR8H1HMfs0lF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="html-content">
+                <h2>HTML</h2>
+                <p>HTML é a linguagem usada para criar e organizar páginas web, usando tags para marcar diferentes elementos como texto, imagens e links.</p>
+            </div>
+        </section>
+    </div>
+    <div class="sep">
+        <br>
+        <br>
+        <br>
+    </div>
+    <div class="css-container">
+        <section class="css">
+            <div class="css-content">
+                <h2>CSS</h2>
+                <p>CSS é a linguagem usada para estilizar páginas da web, controlando cores, fontes, layout e outros aspectos visuais.</p>
+            </div>
+            <div class="css-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z4pCqK-V_Wo?si=6mWoewiGGPIO-NYG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div> 
+        </section>
+    </div>
+    <div class="sep">
+        <br>
+        <br>
+        <br>
+    </div>
+    <div class="html-container">
+        <section class="html">
+            <div class="html-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/c-I5S_zTwAc?si=4RASHnSSOaKTDfCg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="html-content">
+                <h2>JAVASCRIPT</h2>
+                <p>JavaScript é uma linguagem de programação que permite aos desenvolvedores criar interatividade nas páginas da web. Com JavaScript, é possível adicionar comportamentos dinâmicos. Esta linguagem é executada no navegador do utilizador, permitindo uma experiência mais dinâmica e interativa na web.</p>
+            </div>
+        </section>
+    </div>
+    <div class="sep2">
+       <h2><a href="/games_page/games_page.html" class="links">Ready To Test Your Knowledge?</a></h2>
+    </div>
+   
+   
+    
+    
 
 
 
