--- a/login_page/login_page.html
+++ b/login_page/login_page.html
@@ -46,9 +46,6 @@
 
     <div class="wrapper">
         <div class="login-box">
-            <span class="icon-close">
-                <i id="iconClose" class="fa-solid fa-x"></i>
-            </span>
             <div class="form-box login">
             <h2>Login</h2>
             <form action="#">
@@ -66,7 +63,7 @@
                     <label><input type="checkbox">Remember me</label>  
                     <a href="#">Forgot Password?</a>
                 </div>
-                    <a href="/account_page/account_page.html" class="navbar_links"><button  type="submit" class="btn-sub">Login</button></a>
+                    <button class="btn-sub"><a href="/account_page/account_page.html" class="navbar_links">Login</a></button>
                 <div class="login-register">
                     <p>Don't have an account?<a href="#" class="register-link">Register</a></p>
                 </div>
