--- a/aboutUs_page/aboutUs_page.html
+++ b/aboutUs_page/aboutUs_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebCamp</title>
+    <title>About Us | WebCamp</title>
     <link rel="stylesheet" href="/aboutUs_page/aboutUs_page.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="icon" href="/assets/logo_png.png" type="image" id="logo">
