--- a/account_page/account_page.html
+++ b/account_page/account_page.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebCamp</title>
-    <link rel="stylesheet" href="/tsiw_page/tsiw_page.css">
+    <title>Profile | WebCamp</title>
+    <link rel="stylesheet" href="/account_page/account_page.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="icon" href="/assets/logo_png.png" type="image" id="logo">
     <script src="https://kit.fontawesome.com/dada07158c.js" crossorigin="anonymous"></script>
@@ -44,24 +44,60 @@
         </div>
     </nav>
 
-<
+    <div class="profile-container">
+        <div class="profile">
+            <div class="profile-header">
+                <img src="/assets/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg" alt="profile" class="profile-img"/>
+                <div class="profile-text-container">
+                    <h1 class="profile-title">Your Username</h1>
+                    <p class="profile-email">Your Email</p>
+                </div>
+            </div>
+            <div class="menu">
+                <a href="#" class="menu-link"><i class="fa-solid fa-user" id="menu-icon"></i>Account</a>
+                <a href="#" class="menu-link"><i class="fa-solid fa-bell" id="menu-icon"></i>Notification</a>
+                <a href="#" class="menu-link"><i class="fa-solid fa-gear" id="menu-icon"></i>Settings</a>
+                <a href="/login_page/login_page.html" class="menu-link"><i class="fa-solid fa-right-from-bracket" id="menu-icon"></i>Logout</a>
+            </div>
+        </div>
+        <form class="account">
+            <div class="account-header">
+                <h1 class="account-title">Account Settings</h1>
+                <div class="btn-container">
+                    <button class="btn-cancel">Cancel</button>
+                    <button class="btn-save">Save</button>
+                </div>
+            </div>
+            <div class="account-edit">
+                <div class="input-container">
+                    <label>First Name</label>
+                    <input type="text" placeholder="First Name">
+                </div>
+                <div class="input-container">
+                    <label>Last Name</label>
+                    <input type="text" placeholder="Last Name">
+                </div>
+            </div>
 
+            <div class="account-edit">
+                <div class="input-container">
+                    <label>Email</label>
+                    <input type="email" placeholder="Email">
+                </div>
+                <div class="input-container">
+                    <label>Phone Number</label>
+                    <input type="text" placeholder="Phone Number">
+                </div>
+            </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <div class="account-edit">
+                <div class="input-container">
+                    <label>Address</label>
+                    <textarea placeholder="Address"></textarea>
+                </div>
+            </div>
+        </form>
+    </div>
 
     <div class="footer_container">
         <div class="footerlinks">
@@ -96,6 +132,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
-    <script src="/tsiw_page/tsiw_page.js"></script>
+    <script src="/account_page/account_page.js"></script>
 </body>
 </html>
