--- a/login_page/login_page.html
+++ b/login_page/login_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebCamp</title>
+    <title>Login/Register | WebCamp</title>
     <link rel="stylesheet" href="/login_page/login_page.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="icon" href="/assets/logo_png.png" type="image" id="logo">
@@ -63,7 +63,7 @@
                     <label><input type="checkbox">Remember me</label>  
                     <a href="#">Forgot Password?</a>
                 </div>
-                    <button class="btn-sub"><a href="/account_page/account_page.html" class="navbar_links">Login</a></button>
+                    <button class="btn-sub"><a href="/account_page/account_page.html" class="navbar_links2">Login</a></button>
                 <div class="login-register">
                     <p>Don't have an account?<a href="#" class="register-link">Register</a></p>
                 </div>
