--- a/login_page/login_page.html
+++ b/login_page/login_page.html
@@ -51,19 +51,20 @@
             <form action="#">
                 <div class="input-box">
                     <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-                    <input type="email" required>
+                    <input type="email" class="txt-email" required>
                     <label>Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><i class="fa-solid fa-lock"></i></span>
-                    <input type="password" required>
+                    <input type="password" class="txt-pass" required>
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
                     <label><input type="checkbox">Remember me</label>  
                     <a href="#">Forgot Password?</a>
                 </div>
-                    <button class="btn-sub"><a href="/account_page/account_page.html" class="navbar_links2">Login</a></button>
+                    <button class="btn-sub">Login</button>
+                    <p class="message"></p>
                 <div class="login-register">
                     <p>Don't have an account?<a href="#" class="register-link">Register</a></p>
                 </div>
