--- a/tsiw_page/tsiw_page.html
+++ b/tsiw_page/tsiw_page.html
@@ -44,10 +44,105 @@
         </div>
     </nav>
 
-<
 
-
-
+    <div class="blur"></div>
+    <div class="tsiw-container">
+        <h1>See What TSIW Has To Offer</h1>
+    </div>
+    <div class="sep">
+        <br>
+        <br>
+        <br>
+    </div>
+    <div class="stats">
+        <div class="stats_container">
+            <div class="stats_card">
+                <h2>O QUE É TSIW?</h2>
+                <a href="#tsiw" class="navbar_links"><button><i class="fa-solid fa-arrow-down"></i></button></a>
+            </div>
+            <div class="stats_container">
+                <div class="stats_card2">
+                    <h2>PLANO DE ESTUDOS</h2>
+                    <a href="#pe" class="navbar_links"><button><i class="fa-solid fa-arrow-down"></i></button></a>
+                </div>
+            </div>
+            <div class="stats_container">
+                <div class="stats_card3">
+                    <h2>SAÍDAS PROFISSIONAIS</h2>
+                    <a href="#sp" class="navbar_links"><button><i class="fa-solid fa-arrow-down"></i></button></a>
+                </div>
+            </div>
+            <div class="stats_container">
+                <div class="stats_card4">
+                    <h2>PROJETOS</h2>
+                    <a href="#po" class="navbar_links"><button><i class="fa-solid fa-arrow-down"></i></button></a>
+                </div>
+                <button class="esmad">Site Oficial ESMAD</button>
+            </div>
+        </div>
+    </div>
+    
+    <div class="sep">
+        <h1 id="tsiw">TSIW</h1>
+        <p class="p1">A licenciatura foca-se numa abordagem contemporânea e multidisciplinar da Web, com ênfase no design,<br>
+            desenvolvimento de produtos e software para a Web. O programa visa equipar os estudantes com conhecimentos práticos<br>
+            em áreas emergentes como serviços na cloud, computação móvel, plataformas Web e comércio eletrónico.</p>
+        <p class="p2">As competências incluem ergonomia, design de interação, usabilidade, user experience e prototipagem de plataformas digitais.</p>
+        <p class="p3">A combinação de competências de desenvolvimento de produtos com design de interfaces é uma marca distintiva do curso, contribuindo para o seu sucesso. A empregabilidade é alta,
+             com uma taxa de desemprego de 0% entre os diplomados de 2019, refletindo o emprego na área. O curso é prático desde o primeiro ano, com projetos 
+            integrados no plano de estudos, e mantém uma forte ligação com o setor empresarial através de uma vasta rede de parceiros tecnológicos.</p>
+    </div>
+    <div class="sep2">
+        <br>
+        <br>
+        <br>
+    </div>
+    <div class="sep3">
+        <div class="ano1">
+            <h1 id="pe">Plano de Estudos</h1>
+            <h2>Primeiro Ano</h2>
+            <div class="primeiro">
+                <img src="/assets/file.png" alt="1ºano">
+            </div>
+        </div>
+        <div class="ano2">
+            <h2>Segundo Ano</h2>
+            <div class="primeiro">
+                <img src="/assets/2º (2).png" alt="2ºano">
+            </div>
+        </div>
+        <div class="ano3">
+            <h2>Terceiro Ano</h2>
+            <div class="primeiro">
+                <img src="/assets/3º.png" alt="3ºano">
+            </div>
+        </div>
+    </div>
+    <div class="sep2">
+        <br>
+        <br>
+        <br>
+    </div>
+    <div class="sep4">
+        <h1 id="sp">Saídas Profissionais</h1>
+        <h2 class="p1">CONCEÇÃO E DESENVOLVIMENTO DE SOFTWARE E PRODUTOS WEB<br>
+            <button class="cds">O que é ?</button>
+        </h2>
+        <h2 class="p1">DESENVOLVIMENTO DE PRODUTOS MULTIPLATAFORMA<br>
+            <button class="dsm">O que é ?</button>
+        </h2>
+        <h2 class="p1">DESENVOLVIMENTO DE PLATAFORMAS DE COMÉRCIO E NEGÓCIO ELETRÓNICO (UI/UX DEVELOPER)<br>
+            <button class="dpc">O que é ?</button>
+        </h2>
+    </div>
+    <div class="sep2">
+        <br>
+        <br>
+        <br>
+    </div>
+    <div class="sep5">
+        <h1 id="po">Projetos</h1>
+    </div>
 
 
 
