--- a/tsiw_page/tsiw_page.html
+++ b/tsiw_page/tsiw_page.html
@@ -47,7 +47,7 @@
 
     <div class="blur"></div>
     <div class="tsiw-container">
-        <h1>See What TSIW Has To Offer</h1>
+        <h1>Tecnologias e Sistemas de Informação para a Web</h1>
     </div>
     <div class="sep">
         <br>
@@ -142,21 +142,23 @@
     </div>
     <div class="sep5">
         <h1 id="po">Projetos</h1>
+        <h2 class="p1">PLAYOFF - Gestão de Eventos Desportivos
+            <p>Diogo Malhão</p>
+        </h2>
+        <img src="/assets/Diogo Malhão.jpg" alt="playoff">
+        <iframe class="dm"  width="560" height="315" src="https://www.youtube.com/embed/NJcV4zgaZjU?si=rZy_3hDpvf2eHYds" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h2 class="p1">FREJEN Wise Solutions - Human Capital Management
+            <p>Alexandre Magalhães</p>
+        </h2>
+        <img src="/assets/Alexandre_Magalhaes (1).jpg" alt="frejen">
+        <iframe class="dm" width="560" height="315" src="https://www.youtube.com/embed/CH-wKLnmGj4?si=gzzxqKPChgQdCBFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h2 class="p1">BINDTUNING - Design System
+            <p>Beatriz Lopes</p>
+        </h2>
+        <img src="/assets/Beatriz Rodrigues.jpeg" alt="bindtuning">
+        <iframe class="dm" width="560" height="315" src="https://www.youtube.com/embed/hOpRyUDhx1k?si=RMD44g1Je-RmLgSx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <button class="main_btn">Ver Mais</button>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <div class="footer_container">
         <div class="footerlinks">
