--- a/login_page/login_page.html
+++ b/login_page/login_page.html
@@ -61,9 +61,9 @@
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
-                    <label><input type="checkbox">Remember me</label>  
+                    <label><input type="checkbox" id="remember-me">Remember me</label>
                     <a href="#">Forgot Password?</a>
-                </div>
+                  </div>                  
                     <button class="btn-sub">Login</button>
                 <div class="login-register">
                     <p>Don't have an account?<a href="#" class="register-link">Register</a></p>
@@ -75,28 +75,28 @@
             <h2>Registration</h2>
             <form action="#">
                 <div class="input-box">
-                    <span class="icon"><i class="fa-solid fa-user"></i></span>
-                    <input class="user"  type="text" required>
-                    <label>Username</label>
+                  <span class="icon"><i class="fa-solid fa-user"></i></span>
+                  <input class="user" type="text" required>
+                  <label>Username</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-                    <input class="email" type="email" required>
-                    <label>Email</label>
+                  <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+                  <input class="email" type="email" required>
+                  <label>Email</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"><i class="fa-solid fa-lock"></i></span>
-                    <input class="pass" type="password" required>
-                    <label>Password</label>
+                  <span class="icon"><i class="fa-solid fa-lock"></i></span>
+                  <input class="pass" type="password" required>
+                  <label>Password</label>
                 </div>
                 <div class="remember-forgot">
-                    <label><input type="checkbox" required>I agree to the terms & conditions</label>  
+                  <label><input type="checkbox" id="terms" required>I agree to the terms & conditions</label>
                 </div>
-                <button  type="button" class="btn-sub1">Register</button>
+                <button type="button" class="btn-sub1">Register</button>
                 <div class="login-register">
-                    <p>Already have an account?<a href="#" class="login-link">Login</a></p>
+                  <p>Already have an account?<a href="#" class="login-link">Login</a></p>
                 </div>
-            </form>
+              </form>
             </div>
         
         </div>
