--- a/home_page/home.html
+++ b/home_page/home.html
@@ -32,7 +32,7 @@
                     <a href="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/games_page/games_page.html" class="navbar_links"> Escape Room </a>
+                    <a href="/escape_room/escape_room.html" class="navbar_links"> Escape Room </a>
                 </li>
                 <li class="navbar_item">
                     <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
@@ -67,7 +67,7 @@
             <div class="learn_container">
                 <div class="learn_card2">
                     <h2>AMUSING ESCAPE ROOM</h2>
-                    <button><a href="/games_page/games_page.html" class="navbar_links">Play</a></button>
+                    <button><a href="/escape_room/escape_room.html" class="navbar_links">Play</a></button>
                 </div>
             </div>
             <div class="learn_container">
