--- a/escape_room/escape_room.html
+++ b/escape_room/escape_room.html
@@ -29,7 +29,7 @@
                     <a href="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/games_page/games_page.html" class="navbar_links"> Escape Room </a>
+                    <a src="/escape_room/escape_room.html" class="navbar_links"> Escape Room </a>
                 </li>
                 <li class="navbar_item">
                     <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
@@ -65,10 +65,10 @@
     </div>
 
     <map class="workmap" name="workmap">
-        <area shape="poly" coords="719, 522, 910, 519, 919, 653, 722, 649" style="width: 100%;" id="pc1" alt="pc1">
-        <area shape="poly" coords="1025, 520, 1204, 516, 1210, 637, 1031, 641" style="width: 100%;" id="pc2" alt="pc2">
-        <area shape="poly" coords="1303, 517, 1435, 516, 1436, 625, 1303, 629" style="width: 100%;" id="pc3" alt="pc3">
-        <area shape="poly" coords="1197, 318, 1345, 320, 1346, 365, 1197, 366" style="width: 100%;" id="exitSign" alt="exit">
+        <area shape="poly" coords="698, 507, 884, 506, 886, 626, 701, 631" style="width: 100%;" id="pc1" alt="pc1">
+        <area shape="poly" coords="996, 505, 1169, 502, 1175, 620, 1002, 624" style="width: 100%;" id="pc2" alt="pc2">
+        <area shape="poly" coords="1265, 502, 1392, 501, 1395, 608, 1265, 613" style="width: 100%;" id="pc3" alt="pc3">
+        <area shape="poly" coords="1158, 303, 1311, 304, 1310, 360, 1158, 359" style="width: 100%;" id="exitSign" alt="exit">
     </map>
 
     <div class="timer-container">
