--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebCamp</title>
-    <link rel="stylesheet" href="/home_page/home.css">
+    <link rel="stylesheet" href="/styles/home.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="icon" href="/assets/logo_png.png" type="image" id="logo">
     <script src="https://kit.fontawesome.com/dada07158c.js" crossorigin="anonymous"></script>
@@ -26,19 +26,19 @@
                     <a src="/assets/logo_png.png" class="navbar_links"> Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/tsiw_page/tsiw_page.html" class="navbar_links"> TSIW </a>
+                    <a href="/tsiw_page.html" class="navbar_links"> TSIW </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
+                    <a href="/learn_page.html" class="navbar_links"> Learn </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/escape_room/escape_room.html" class="navbar_links"> Escape Room </a>
+                    <a href="/escape_room.html" class="navbar_links"> Escape Room </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
+                    <a href="/aboutUs_page.html" class="navbar_links"> About Us </a>
                 </li>
                 <li class="navbar_btn">
-                    <a href="/login_page/login_page.html" class="button"> Sign Up  </a>
+                    <a href="/login_page.html" class="button"> Sign Up  </a>
                 </li>
             </ul>
         </div>
@@ -49,7 +49,7 @@
             <div class="main_content">
                 <h1 class="anm">TSIW</h1><br>
                 <h2 class="anm">See what makes this course different</h2>
-                <button class="main_btn"><a href="/tsiw_page/tsiw_page.html">Get Started</a></button>
+                <button class="main_btn"><a href="/tsiw_page.html">Get Started</a></button>
             </div>
             <div class="main_img-container">
                 <img src="/assets/Logotipo-ESMAD-Branco.png" alt="esmad" id="main_img">
@@ -62,24 +62,24 @@
         <div class="learn_container">
             <div class="learn_card">
                 <h2>HTML, CSS AND JAVASCRIPT</h2>
-                <button><a href="/learn_page/learn_page.html" class="navbar_links">Learn</a></button>
+                <button><a href="/learn_page.html" class="navbar_links">Learn</a></button>
             </div>
             <div class="learn_container">
                 <div class="learn_card2">
                     <h2>AMUSING ESCAPE ROOM</h2>
-                    <button><a href="/escape_room/escape_room.html" class="navbar_links">Play</a></button>
+                    <button><a href="/escape_room.html" class="navbar_links">Play</a></button>
                 </div>
             </div>
             <div class="learn_container">
                 <div class="learn_card3">
                     <h2>LEARN MORE ABOUT US</h2>
-                    <button><a href="/aboutUs_page/aboutUs_page.html" class="navbar_links">See More</a></button>
+                    <button><a href="/aboutUs_page.html" class="navbar_links">See More</a></button>
                 </div>
             </div>
             <div class="learn_container">
                 <div class="learn_card4">
                     <h2>CUSTOMIZE YOUR PROFILE</h2>
-                    <button><a href="/login_page/login_page.html" class="navbar_links">Account</a></button>
+                    <button><a href="/login_page.html" class="navbar_links">Account</a></button>
                 </div>
             </div>
         </div>
@@ -118,6 +118,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
-    <script src="/home_page/home.js"></script>
+    <script src="/script/home.js"></script>
 </body>
 </html>
