--- a/escape_room.html
+++ b/escape_room.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EscapeRoom Page</title>
-    <link rel="stylesheet" href="/escape_room/escape_room.css">
+    <link rel="stylesheet" href="/styles/escape_room.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="icon" href="/assets/logo_png.png" type="image" id="logo">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWj44oi9sI5ALpBi4Su/0mpzn0w0r7rc7Ftw3Q" crossorigin="anonymous">
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar_container">
-            <h1><a href="/home_page/home.html" class="navbar_links"><img src="/assets/logo_png2.png" id="navbar_logo" ></a></h1>
+            <h1><a href="/home.html" class="navbar_links"><img src="/assets/logo_png2.png" id="navbar_logo" ></a></h1>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -20,22 +20,22 @@
             </div>
             <ul class="navbar_menu">
                 <li class="navbar_item">
-                    <a href="/home_page/home.html" class="navbar_links"> Home </a>
+                    <a href="/home.html" class="navbar_links"> Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/tsiw_page/tsiw_page.html" class="navbar_links"> TSIW </a>
+                    <a href="/tsiw_page.html" class="navbar_links"> TSIW </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
+                    <a href="/learn_page.html" class="navbar_links"> Learn </a>
                 </li>
                 <li class="navbar_item">
-                    <a src="/escape_room/escape_room.html" class="navbar_links"> Escape Room </a>
+                    <a src="/escape_room.html" class="navbar_links"> Escape Room </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
+                    <a href="/aboutUs_page.html" class="navbar_links"> About Us </a>
                 </li>
                 <li class="navbar_btn">
-                    <a href="/login_page/login_page.html" class="button"> Sign Up  </a>
+                    <a href="/login_page.html" class="button"> Sign Up  </a>
                 </li>
             </ul>
         </div>
@@ -201,6 +201,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
-    <script src="/escape_room/escape_room.js"></script>
+    <script src="/script/escape_room.js"></script>
 </body>
 </html>
