--- a/learn_page.html
+++ b/learn_page.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn | WebCamp</title>
-    <link rel="stylesheet" href="/learn_page/learn_page.css">
+    <link rel="stylesheet" href="/styles/learn_page.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="icon" href="/assets/logo_png.png" type="image" id="logo">
     <script src="https://kit.fontawesome.com/dada07158c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMWj44oi9sI5ALpBi4Su/0mpzn0w0r7rc7Ftw3Q" crossorigin="anonymous">
 
-
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar_container">
-            <h1><a href="/home_page/home.html" class="navbar_links"><img src="/assets/logo_png2.png" id="navbar_logo" ></a></h1>
+            <h1><a href="/home.html" class="navbar_links"><img src="/assets/logo_png2.png" id="navbar_logo" ></a></h1>
             <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -23,22 +22,22 @@
             </div>
             <ul class="navbar_menu">
                 <li class="navbar_item">
-                    <a href="/home_page/home.html" class="navbar_links"> Home </a>
+                    <a href="/home.html" class="navbar_links"> Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/tsiw_page/tsiw_page.html" class="navbar_links"> TSIW </a>
+                    <a href="/tsiw_page.html" class="navbar_links"> TSIW </a>
                 </li>
                 <li class="navbar_item">
-                    <a src="/learn_page/learn_page.html" class="navbar_links"> Learn </a>
+                    <a src="/learn_page.html" class="navbar_links"> Learn </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/escape_room/escape_room.html" class="navbar_links"> Escape Room </a>
+                    <a href="/escape_room.html" class="navbar_links"> Escape Room </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/aboutUs_page/aboutUs_page.html" class="navbar_links"> About Us </a>
+                    <a href="/aboutUs_page.html" class="navbar_links"> About Us </a>
                 </li>
                 <li class="navbar_btn">
-                    <a href="/login_page/login_page.html" class="button"> Sign Up  </a>
+                    <a href="/login_page.html" class="button"> Sign Up  </a>
                 </li>
             </ul>
         </div>
@@ -92,28 +91,8 @@
         </section>
     </div>
     <div class="sep2">
-       <h2><a href="/games_page/games_page.html" class="links">Ready To Test Your Knowledge?</a></h2>
+       <h2><a href="/escape_room.html" class="links">Ready To Test Your Knowledge?</a></h2>
     </div>
-   
-   
-    
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <div class="footer_container">
         <div class="footerlinks">
@@ -148,6 +127,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
-    <script src="/learn_page/learn_page.js"></script>
+    <script src="/script/learn_page.js"></script>
 </body>
 </html>
